cabal-version:       2.4
name:                pwrt
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Vasiliy Yorkin
maintainer:          vasiliy.yorkin@gmail.com
copyright:           2019 (c) Vasiliy Yorkin aka vyorkin
extra-source-files:  README.md
build-type:          Custom

custom-setup
  setup-depends:     base
                   , Cabal
                   , liquidhaskell-cabal >= 0.2.1


flag liquidhaskell
  description:         After building, verify with LiquidHaskell
  default:             False

test-suite readme
  build-depends:           base ^>= 4.12.0.0
                         , liquidhaskell-cabal >= 0.2.1
                         , markdown-unlit ^>= 0.5.0
  build-tool-depends:      markdown-unlit:markdown-unlit
  type:                    exitcode-stdio-1.0
  main-is:                 README.lhs
  default-language:        Haskell2010
  default-extensions:      TupleSections
  ghc-options:             -pgmL markdown-unlit
  x-liquidhaskell-options: --diff --no-termination
