cabal-version:       2.4
name:                pwrt
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Vasiliy Yorkin
maintainer:          vasiliy.yorkin@gmail.com
copyright:           2019 (c) Vasiliy Yorkin aka vyorkin
extra-source-files:  README.md
build-type:          Custom

custom-setup
  setup-depends:     base
                   , Cabal
                   , liquidhaskell-cabal ^>= 0.2.1

flag liquidhaskell
  description:       After building, verify with LiquidHaskell
  default:           False

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wcompat
                     -Widentities
                     -Wredundant-constraints
                     -fhide-source-paths
                     -Wpartial-fields
  build-depends:     base ^>= 4.12.0.0
                   , liquidhaskell-cabal ^>= 0.2.1
  exposed-modules:   A1
