cabal-version:       2.4
name:                pwrt
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Vasiliy Yorkin
maintainer:          vasiliy.yorkin@gmail.com
copyright:           2019 (c) Vasiliy Yorkin aka vyorkin
extra-source-files:  README.md
build-type:          Custom

custom-setup
  setup-depends:     base
                   , Cabal
                   , liquidhaskell-cabal ^>= 0.2.1

flag liquidhaskell
  description:       After building, verify with LiquidHaskell
  default:           False

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wcompat
                     -Widentities
                     -Wredundant-constraints
                     -fwarn-incomplete-patterns
                     -fhide-source-paths
                     -Wpartial-fields
  build-depends:     base ^>= 4.12.0.0
                   , liquidhaskell-cabal ^>= 0.2.1
                   , containers ^>= 0.6
                   , vector ^>= 0.12
  x-liquidhaskell-options: --no-termination
  exposed-modules:   A1
                   , A2
                   , A3
                   , B1
                   , B2
                   , B3
                   , B4
